# DelSolClock

./: .clang-format  .gitignore  AppleMediaService.cpp  AppleMediaService.h  AppleNotificationCenterService.cpp  AppleNotificationCenterService.h  BleOta.cpp  Bluetooth.cpp  Bluetooth.h  CarIO.cpp  CarIO.h  CurrentTimeService.cpp  DelSolClock.ino  Display.cpp  Display.h  Gps.cpp  diagram.json  display2.cpp  display2.h  libraries.txt  main.cpp  main.h  motion.h  pins.h  readme.md  render.yaml  screens.cpp  screens.h  simulation_main.cpp  simulation_main.h  tft.cpp  version.h  wokwi.toml
.github/workflows/: main.yml
DelSolClockApp/: DelSolClockApp.sln
DelSolClockApp/DelSolClockApp/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  DelSolClockApp.csproj
DelSolClockApp/DelSolClockApp.Android/: BluetoothPermissionService.cs  DelSolClockApp.Android.csproj  MainActivity.cs
DelSolClockApp/DelSolClockApp.Android/Properties/: AndroidManifest.xml  AssemblyInfo.cs
DelSolClockApp/DelSolClockApp.iOS/: AppDelegate.cs  BluetoothPermissionService.cs  DelSolClockApp.iOS.csproj  Info.plist  Main.cs
DelSolClockApp/DelSolClockApp.iOS/Properties/: AssemblyInfo.cs
DelSolClockApp/DelSolClockApp/Models/: CarStatus.cs  Item.cs
DelSolClockApp/DelSolClockApp/Services/: DelSolConnection.cs  IBluetoothPermissionService.cs  IDataStore.cs  Logger.cs  MockDataStore.cs
DelSolClockApp/DelSolClockApp/ViewModels/: AboutViewModel.cs  BaseViewModel.cs  ItemDetailViewModel.cs  ItemsViewModel.cs  LogViewModel.cs  LoginViewModel.cs  NewItemViewModel.cs  StatusViewModel.cs
DelSolClockApp/DelSolClockApp/Views/: AboutPage.xaml  AboutPage.xaml.cs  ItemDetailPage.xaml  ItemDetailPage.xaml.cs  ItemsPage.xaml  ItemsPage.xaml.cs  LogPage.xaml  LogPage.xaml.cs  LoginPage.xaml  LoginPage.xaml.cs  NavigationPage.xaml  NavigationPage.xaml.cs  NewItemPage.xaml  NewItemPage.xaml.cs  StatusPage.xaml  StatusPage.xaml.cs  UpdatePage.xaml  UpdatePage.xaml.cs
DelSolClockAppMaui/: .gitignore  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  DelSolClockAppMaui.csproj  DelSolClockAppMaui.sln  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
DelSolClockAppMaui/Components/: StatusItem.xaml  StatusItem.xaml.cs  UpdateItem.xaml  UpdateItem.xaml.cs
DelSolClockAppMaui/Models/: CrashDumpFile.cs  CrashDumpStatus.cs  DiscoveredDevice.cs  VehicleStatus.cs
DelSolClockAppMaui/Pages/: DebugPage.xaml  DebugPage.xaml.cs  LogPage.xaml  LogPage.xaml.cs  StatusPage.xaml  StatusPage.xaml.cs  UpdatePage.xaml  UpdatePage.xaml.cs
DelSolClockAppMaui/Services/: BleConnectionManager.cs  DebugService.cs  DelSolConnection.cs  DelSolConstants.cs  DelSolDevice.cs  FirmwareBrowser.cs  VehicleService.cs
DelSolClockAppMaui/View Models/: StatusItemData.cs  UpdateItemData.cs
Design/: OldSols.pdn
Design/Design1/: Honda Civic del Sol (100x100 pixel).psd  Honda Civic del Sol (3000x3000 pixel).psd
Fonts/: .gitignore  Readme.md  convert.sh  convert_fonts.py  go.sh  instructions.md
UiDesigner/: .gitignore  CMakeLists.txt  README.md
UiDesigner/runner/: image_loader_file.cpp  main.cpp  nav_render.cpp
UiDesigner/tools/: build.ps1  configure.ps1  generate_on_save.ps1  vsenv.ps1
api/: package-lock.json  package.json  server.js
ci/: build.sh  setup.sh
firmware/: extra_replace_bootloader.py  partitions.csv  platformio.ini
firmware/include/: apple_media_service.h  apple_notification.h  apple_notification_center_service.h  ble_ota.h  bluetooth.h  car_io.h  current_time_service.h  debug_service.h  demo.h  display.h  display_config.h  gps.h  gps_recorder.h  logger.h  motion.h  navigation_service.h  notification_processor.h  pins.h  quarter_mile.h  screens.h  sun.h  tft.h  utilities.h  vec.h
firmware/include/fonts/: JetBrainsMono_Regular14pt7b.h  (+4 more)
firmware/src/: apple_media_service.cpp  apple_notification.cpp  apple_notification_center_service.cpp  ble_ota.cpp  bluetooth.cpp  car_io.cpp  current_time_service.cpp  debug_service.cpp  demo.cpp  display.cpp  display_config.cpp  gps.cpp  gps_recorder.cpp  logger.cpp  main.cpp  motion.cpp  navigation_service.cpp  notification_processor.cpp  quarter_mile.cpp  screens.cpp  sun.cpp  tft.cpp  utilities.cpp  vec.cpp
hardware/: 12V voltage vs BATT ADC code V2.xlsx  12V voltage vs BATT ADC code.xlsx  DelSol-bottomkeepout-bottom-left.dxf  DelSol-bottomkeepout-bottomcenter.dxf  DelSol-bottomkeepout-bottomright.dxf  DelSol-bottomkeepout-top.dxf  readme.md
hardware-2/: .gitignore  DelSolClockFrontPCBOutline.dxf  DelSolClockRearPCBOutline.dxf  DelSolLib.kicad_sym
hardware-2/DelSolClock/: DelSolClock.kicad_pcb  DelSolClock.kicad_pro  DelSolClock.kicad_sch
hardware-2/DelSolLib.pretty/: Buzzer_CUI-CMI-9650C-120.kicad_mod  LED_Rectangular_W3.65mm_L6.15mm.kicad_mod  Switch_DelSol.kicad_mod  Terminal_Spring_Del_Sol.kicad_mod
hardware/DelSolClock/: DelSolClock.PcbDoc  DelSolClock.PrjPcb  DelSolClock.PrjPcbStructure  DelSolClock.SchDoc  DelSolClock.kicad_pcb  DelSolClock.kicad_pro  DelSolClock.kicad_sch  input_divider.kicad_sch
hardware/DelSolClock_Rear/: DelSolClock_Rear.PcbDoc  DelSolClock_Rear.PrjPcb  DelSolClock_Rear.PrjPcbStructure  DelSolClock_Rear.SchDoc
hardware/DelSolLib.pretty/: Adafruit_1.14in_TFT.kicad_mod  K7803T-500R3.kicad_mod  LED_Rectangular_W3.65mm_L6.15mm.kicad_mod
my_fonts/: JetBrainsMono_Regular18pt7b.h  JetBrainsMono_Thin18pt7b.h  JetBrainsMono_Thin6pt7b.h  digital_7__mono_40pt7b.h
old_fonts/: JetBrainsMono_Regular10pt7b.h  JetBrainsMono_Regular11pt7b.h  JetBrainsMono_Regular12pt7b.h  JetBrainsMono_Regular20pt7b.h  JetBrainsMono_Regular22pt7b.h  JetBrainsMono_Regular8pt7b.h  JetBrainsMono_Regular9pt7b.h
plans/: ble_connection_maui.md  ble_connection_maui_review.md  interface_spec.md  maui_todo.md  mobile_app_plan.md
webapp/: .env.example  .gitignore  DEPLOY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webapp/_spike/: serve-tunnel.mjs  serve.mjs  spike.html
webapp/public/: manifest.webmanifest  sw.js
webapp/src/: main.ts  styles.css
webapp/tools/: capture-route.mjs  export-route.ts  send-route.ts  serve.mjs
(+107 files in other folders)
